current blocker is trying to deal with clipPath visibility, which is basically an issue where the circle that extends the entire screen to navigate to other pages is visible

--- a/recipe-search/src/components/NavBar/NavBar.module.scss
+++ b/recipe-search/src/components/NavBar/NavBar.module.scss
@@ -17,10 +17,13 @@
   top: 0;
   left: 0;
   bottom: 0;
-  background: #212529;
   width: 100%;
   height: 100vh;
-  z-index: 10;
+  z-index: 25;
+}
+
+.clipPath {
+  background: #212529;
 }
 
 .button {
@@ -34,7 +37,7 @@
   height: 50px;
   border-radius: 50%;
   background: transparent;
-  z-index: 15;
+  z-index: 30;
 }
 
 .ul,
